--- a/NOMAD/Base.lproj/Main.storyboard
+++ b/NOMAD/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="V3v-vq-noj">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="V3v-vq-noj">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -16,10 +16,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <tableView opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="v36-ST-ytu">
-                                <rect key="frame" x="0.0" y="133" width="320" height="435"/>
+                            <tableView opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="v36-ST-ytu">
+                                <rect key="frame" x="0.0" y="113" width="320" height="455"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="455" id="l4e-zh-QNM"/>
+                                </constraints>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="140" id="TV2-Y3-Cin">
                                         <rect key="frame" x="0.0" y="22" width="320" height="140"/>
@@ -105,13 +108,13 @@
                                     <outlet property="delegate" destination="V3v-vq-noj" id="cxF-Po-deN"/>
                                 </connections>
                             </tableView>
-                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Pbz-iJ-elP">
-                                <rect key="frame" x="0.0" y="20" width="320" height="114"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pbz-iJ-elP">
+                                <rect key="frame" x="0.0" y="-1" width="320" height="114"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.61960784310000006" green="0.0" blue="0.36470588240000001" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NomadHeaderLogo.png" translatesAutoresizingMaskIntoConstraints="NO" id="ges-Tg-Pvs">
-                                <rect key="frame" x="95" y="20" width="128" height="128"/>
+                                <rect key="frame" x="95" y="3" width="128" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="128" id="sRw-TC-jKl"/>
@@ -120,10 +123,16 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="v36-ST-ytu" firstAttribute="leading" secondItem="Pbz-iJ-elP" secondAttribute="leading" id="9f3-KT-vdz"/>
+                            <constraint firstItem="v36-ST-ytu" firstAttribute="top" secondItem="Pbz-iJ-elP" secondAttribute="bottom" id="Fd5-st-DOO"/>
                             <constraint firstItem="ges-Tg-Pvs" firstAttribute="leading" secondItem="9O2-cU-W3e" secondAttribute="leading" constant="95" id="Fi0-NN-Icf"/>
-                            <constraint firstItem="ges-Tg-Pvs" firstAttribute="top" secondItem="Pbz-iJ-elP" secondAttribute="top" id="Kbd-qT-3Hm"/>
-                            <constraint firstItem="ges-Tg-Pvs" firstAttribute="top" secondItem="9O2-cU-W3e" secondAttribute="top" constant="20" symbolic="YES" id="TPX-65-uT8"/>
-                            <constraint firstItem="oEy-H1-fcY" firstAttribute="top" secondItem="ges-Tg-Pvs" secondAttribute="bottom" constant="420" id="U9T-2v-7f4"/>
+                            <constraint firstAttribute="trailing" secondItem="v36-ST-ytu" secondAttribute="trailing" id="Iyp-sT-RzH"/>
+                            <constraint firstItem="ges-Tg-Pvs" firstAttribute="top" secondItem="Pbz-iJ-elP" secondAttribute="top" constant="4" id="Kbd-qT-3Hm"/>
+                            <constraint firstItem="Pbz-iJ-elP" firstAttribute="trailing" secondItem="v36-ST-ytu" secondAttribute="trailing" id="Lf1-6n-3H3"/>
+                            <constraint firstItem="ges-Tg-Pvs" firstAttribute="top" secondItem="9O2-cU-W3e" secondAttribute="top" constant="3" id="TPX-65-uT8"/>
+                            <constraint firstItem="oEy-H1-fcY" firstAttribute="top" secondItem="ges-Tg-Pvs" secondAttribute="bottom" constant="437" id="U9T-2v-7f4"/>
+                            <constraint firstAttribute="bottom" secondItem="v36-ST-ytu" secondAttribute="bottom" id="UzO-JI-Do8"/>
+                            <constraint firstItem="v36-ST-ytu" firstAttribute="leading" secondItem="9O2-cU-W3e" secondAttribute="leading" id="xU5-5u-gES"/>
                         </constraints>
                     </view>
                     <connections>
